--- a/themes/bootstrap3/templates/RecordDriver/SolrDefault/core.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/SolrDefault/core.phtml
@@ -115,7 +115,7 @@
         </tr>
       <? endif; ?>
 
-      <? include(realpath(dirname(__FILE__) . 'JOP.phtml')); ?>
+      <? include(realpath(dirname(__FILE__) . '/JOP.phtml')); ?>
 
       <? $publications = $this->driver->getPublicationDetails(); if (!empty($publications)): ?>
       <tr>
